fix(cards): making all the cards the same size, truncating long titles

--- a/pencil/src/app/home/home.component.scss
+++ b/pencil/src/app/home/home.component.scss
@@ -28,8 +28,16 @@
 
 .card{
     padding-left: 10px;
+    height: 100%;
 }
 
 .cards{
     padding-bottom: 10px;
+}
+
+.title {
+    line-height: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
