--- a/pencil/src/app/owner/owner.component.scss
+++ b/pencil/src/app/owner/owner.component.scss
@@ -4,6 +4,7 @@
 
 .card{
     padding-left: 10px;
+    height: 100%;
 }
 
 .cards{
